-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.25beta - Nov 16, 2021

 + GUI(Linux): file explorer tab: explore files on disk directly from fmedia
    and add files to playlist without drag-n-drop from file manager app
 + GUI(Linux): "gui.editor_path" conf option
 * GUI: on exit, don't rewrite m3u playlist files unless necessary
 - .ogg(FLAC): couldn't read some files
 - .aac read: "--stream-copy -o .mp4" produced unreadable mp4 file


fmedia v1.24.1 - May 17, 2021

 - capture stream didn't work with "--dev-capture=0 --dev-loopback=N"


fmedia v1.24 - Apr 10, 2021

 + .mkv: support Opus;  support .webm;  support seeking (slightly inaccurate)
 + .mkv(Opus) -> .ogg copy: "fmedia f.mkv -o f.ogg --stream-copy"
 + .cue: support .mp4/.mkv/.mp3
 + .avi: support "pcm" codec
 + GUI(Linux): "File->Delete From Disk": move to Trash by default
 - .mkv: crash when reading tags
 - Opus decode: fix "clicks" on tracks changing;  accurate positioning


fmedia v1.23.1 - Mar 3, 2021

 - .ogg read: fix (v1.23 bug)
 - GUI (Linux): youtube downloader: save/restore settings for format and output directory


fmedia v1.23 - Feb 25, 2021

 + Windows: record from capture and loopback device in parallel into separate files:
   "--record --dev-capture=N --dev-loopback=N -o rec$counter.wav"
 + GUI (Linux): Help->QuickCommand: dialog with all menu commands in one list
 + GUI (Linux): File->RenameFile: rename/move a file on disk
 + .caf read: support pcm-le data
 * .mkv read: couldn't read some files
 - .mp4 read/write: fix (v1.22 bug)
 - GUI (Linux): Convert: didn't copy meta data from source
 - core: --mix didn't work
 - core: didn't work on old Windows (v1.19 bug)
 - core: didn't truncate output files when '--overwrite' is used (v1.16 bug)


fmedia v1.22 - Jan 25, 2021
