@@ -60,38 +60,38 @@ static const fmed_log std_logger = {
 static void std_log(uint flags, fmed_logdata *ld)
 {
 	char buf[4096];
-	char *s = buf;
-	const char *end = buf + FFCNT(buf) - FFSLEN("\n");
+	ffuint cap = FFCNT(buf) - FFSLEN("\n");
+	ffstr s = FFSTR_INITN(buf, 0);
 
 	if (flags != FMED_LOG_USER) {
 		if (ld->tid != 0) {
-			s += ffs_fmt(s, end, "%s :%xU [%s] %s: "
+			ffstr_addfmt(&s, cap, "%s :%xU [%s] %s: "
 				, ld->stime, ld->tid, ld->level, ld->module);
 		} else {
-			s += ffs_fmt(s, end, "%s [%s] %s: "
+			ffstr_addfmt(&s, cap, "%s [%s] %s: "
 				, ld->stime, ld->level, ld->module);
 		}
 
 		if (ld->ctx != NULL)
-			s += ffs_fmt(s, end, "%S:\t", ld->ctx);
+			ffstr_addfmt(&s, cap, "%S:\t", ld->ctx);
 	}
 
 	if ((flags & _FMED_LOG_LEVMASK) <= FMED_LOG_USER && ld->trk != NULL) {
 		const char *infn = g->track->getvalstr(ld->trk, "input");
 		if (infn != FMED_PNULL)
-			s += ffs_fmt(s, end, "\"%s\": ", infn);
+			ffstr_addfmt(&s, cap, "\"%s\": ", infn);
 	}
 
-	s += ffs_fmtv(s, end, ld->fmt, ld->va);
+	ffstr_addfmtv(&s, cap, ld->fmt, ld->va);
 
 	if (flags & FMED_LOG_SYS)
-		s += ffs_fmt(s, end, ": %E", fferr_last());
+		ffstr_addfmt(&s, cap, ": %E", fferr_last());
 
-	*s++ = '\n';
+	s.ptr[s.len++] = '\n';
 
 	uint lev = flags & _FMED_LOG_LEVMASK;
 	fffd fd = (lev > FMED_LOG_USER && !core->props->stdout_busy) ? ffstdout : ffstderr;
-	ffstd_write(fd, buf, s - buf);
+	ffstd_write(fd, s.ptr, s.len);
 }
 
 
@@ -607,7 +607,7 @@ int main(int argc, char **argv, char **env)
 
 			} else if (ps != 0) {
 				core->log(FMED_LOG_INFO, NULL, "core", "spawned background process: PID %u", ffps_id(ps));
-				(void)ffps_close(ps);
+				ffps_close(ps);
 				rc = 0;
 				goto end;
 			}
@@ -638,8 +638,10 @@ int main(int argc, char **argv, char **env)
 		}
 	}
 
+#ifndef FF_WIN
 	static const int sigs_block[] = { SIGIO, SIGCHLD };
 	ffsig_mask(SIG_BLOCK, sigs_block, FF_COUNT(sigs_block));
+#endif
 
 	if (0 != core->sig(FMED_OPEN))
 		goto end;
